# test-plugin

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile
example/: ls.xml
src/: test.c
yang/: plugin-test@2018-02-20.yang  test-plugin@2018-02-20.yang
